[package]
name = "fractional_cascading"
version = "0.1.0"
authors = ["Michael Graczyk <michael@mgraczyk.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
superslice = "1.0.0"
serde_json = "1.0.40"
rand = "0.7.0"
